Added tr language and updated stuff

--- a/about.pug
+++ b/about.pug
@@ -24,6 +24,9 @@ block content
         a.button(href='http://register.mercode.org')
           i.fa.fa-sign-in(aria-hidden='true')
           |  Register
+        a.button(href='https://github.com/mercode-org')
+          i.fa.fa-fork(aria-hidden='true')
+          |  Contribute
     li
       .konu
         h2 We Survive with Your Donations!
@@ -40,6 +43,9 @@ block content
         a.button(href='join.pug')
           i.fa.fa-handshake-o(aria-hidden='true')
           |  Join
+        a.button(href='https://github.com/mercode-org')
+          i.fa.fa-fork(aria-hidden='true')
+          |  Contribute
     li
       .konu
         h2 Decentralize to Be Free!
