--- a/join.pug
+++ b/join.pug
@@ -4,7 +4,7 @@ block css
   <link rel="stylesheet" type="text/css" href="css/stiller.css">
 
 block content
-  <form method="POST" action="https://formspree.io/tanakinci2002@gmail.com">
+  <form method="POST" action="https://formspree.io/tansiretakinci@yandex.com">
     <div class="txtb">
       <label><span>Name</span>
         <input required type="text" name="name" placeholder="Write your name (required)"></label>
