--- a/projects.pug
+++ b/projects.pug
@@ -30,7 +30,7 @@ block content
         div
           img(style='width: 45%;height: auto; padding-top: 10px;', src='assets/meros.png', alt='')
         p(style='font-size: 14px;')
-          | MerOS is an Arch based, modern, apt and yaourt compatible, multi-platform, libertarian operating system. It&rsquo;s development is started in Turkey by Tan Siret AKINCI in order to replace pro-nationalist operating systems of the government but later it&rsquo;s development is given to Merith. Now it is the main project of the Mercode team as Merith is the current project leader due to his commits. It&rsquo;s gonna finish very soon as new features are coming everyday. Until that, you can test MerOS at Mercode stands during open source exhibitions.
+          | MerOS is a potable live Linux distro with pre-installed programs that you can install on your USB.
         a.button(href='#')
           i.fa.fa-external-link-square(aria-hidden='true')
           |  Enter
@@ -40,7 +40,7 @@ block content
           img(style='width: 45%;height: auto; padding-top: 10px;', src='assets/hackup.png', alt='')
         p(style='font-size: 14px;')
           | Using Italian Scentific High School as its hq, HackUp is an IT club made up with high school and university students around The World.
-        a.button(href='#')
+        a.button(href='https://hackup.mercode.org')
           i.fa.fa-external-link-square(aria-hidden='true')
           |  Enter
 block footer
