--- a/contact.pug
+++ b/contact.pug
@@ -5,7 +5,7 @@ block css
   <link rel="stylesheet" type="text/css" href="css/iletisimbody.css">
 
 block content
-  <form method="POST" action="https://formspree.io/tanakinci2002@gmail.com">
+  <form method="POST" action="https://formspree.io/tansiretakinci@yandex.com">
     <div class="txtb">
       <label><span>Name</span>
         <input type="text" name="name" placeholder="Write your name (required)"></label>
