--- a/tr/main.pug
+++ b/tr/main.pug
@@ -6,30 +6,30 @@ head
 
   block css
 
-  <link rel="shortcut icon" type="image/png" href="assets/icon.png"/>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="shortcut icon" type="image/png" href="../assets/icon.png">
+  <link rel="stylesheet" href="../css/main.css">
 
   <script src="./js/main.js"></script>
 body
   block header
     <header>
       <div>
-        <div class="logo animated bounce"><a href="https://mercode.org/"><img src="assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
-        <div class="logo"><a href="https://mercode.org/"><img src="assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
+        <div class="logo animated bounce"><a href="https://mercode.org/"><img src="../assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
+        <div class="logo"><a href="https://mercode.org/"><img src="../assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
       </div>
       <nav>
         <ul>
           <li><a href="https://os.mercode.org"><i class="fa fa-linux" aria-hidden="true"></i> Linux</a></li>
-          <li><a href="about.html"><i class="fa fa-users" aria-hidden="true"></i> About</a></li>
-          <li><a href="projects.html"><i class="fa fa-tasks" aria-hidden="true"></i> Projects</a></li>
-          <li><a href="contact.html"><i class="fa fa-envelope " aria-hidden="true"></i> Contact</a></li>
-          <li><a href="https://hub.mercode.org"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a></li>
+          <li><a href="about.html"><i class="fa fa-users" aria-hidden="true"></i> Hakkımızda</a></li>
+          <li><a href="projects.html"><i class="fa fa-tasks" aria-hidden="true"></i> Projeler</a></li>
+          <li><a href="contact.html"><i class="fa fa-envelope " aria-hidden="true"></i> İletişim</a></li>
+          <li><a href="https://hub.mercode.org"><i class="fa fa-sign-in" aria-hidden="true"></i> Giriş</a></li>
           <li style="display: none"><a href="portal.html">PARCEL BUGFIX</a></li>
           <div class="dropdown">
-            <li><a class="dropbtn"><i class="fa fa-globe" aria-hidden="true"></i> English <i class="fa fa-caret-down" aria-hidden="true"></i></a></li>
+            <li><a class="dropbtn"><i class="fa fa-globe" aria-hidden="true"></i> Türkçe <i class="fa fa-caret-down" aria-hidden="true"></i></a></li>
             <div class="dropdown-content">
-              <a href="./index.html">English</a>
-              <a href="tr/index.html">Türkçe</a>
+              <a href="../index.html">English</a>
+              <a href="./index.html">Türkçe</a>
             </div>
           </div>
         </ul>
