--- a/tr/main.pug
+++ b/tr/main.pug
@@ -48,7 +48,7 @@ body
         <div class="footer-sosyal-ikon">
           <ul>
             <li><a href="https://github.com/mercode-org"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-            <li><a href="https://t.me/mercode"><i class="fa fa-send" aria-hidden="true"></i></a></li>
+            <li><a href="https://t.me/mercode"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
             <li><a href="https://twitter.com/mercodeorg"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
             <li><a href="https://www.linkedin.com/company/mercode-org/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
           </ul>
