--- a/about.pug
+++ b/about.pug
@@ -25,7 +25,7 @@ block content
           i.fa.fa-sign-in(aria-hidden='true')
           |  Register
         a.button(href='https://github.com/mercode-org')
-          i.fa.fa-fork(aria-hidden='true')
+          i.fa.fa-code-fork(aria-hidden='true')
           |  Contribute
     li
       .konu
@@ -44,7 +44,7 @@ block content
           i.fa.fa-handshake-o(aria-hidden='true')
           |  Join
         a.button(href='https://github.com/mercode-org')
-          i.fa.fa-fork(aria-hidden='true')
+          i.fa.fa-code-fork(aria-hidden='true')
           |  Contribute
     li
       .konu
