--- a/tr/main.pug
+++ b/tr/main.pug
@@ -14,8 +14,8 @@ body
   block header
     <header>
       <div>
-        <div class="logo animated bounce"><a href="https://mercode.org/"><img src="../assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
-        <div class="logo"><a href="https://mercode.org/"><img src="../assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
+        <div class="logo animated bounce"><a href="https://mercode.org/tr/index.html"><img src="../assets/ikonbeyaz.svg" style="width:auto;height:40px;padding-top:6px;" alt="***MERCODE"></a></div>
+        <div class="logo"><a href="https://mercode.org/tr/index.html"><img src="../assets/yazibeyaz.png" style="width:auto;height:23px;padding-top:14px;margin-left: 12px;" alt=".ORG***"></a></div>
       </div>
       <nav>
         <ul>
