--- a/index.pug
+++ b/index.pug
@@ -9,6 +9,26 @@ block content
 
   <a href="join.pug" class="button animated pulse delay-1s"><i class="fa fa-handshake-o" aria-hidden="true"></i>  Join Us</a>
   <a href="https://hub.mercode.org/register" class="button animated pulse delay-1s"><i class="fa fa-sign-in" aria-hidden="true"></i>  Register</a>
-  <a href="https://www.patreon.com/mercode" class="button animated pulse delay-1s"><i class="fa fa-money" aria-hidden="true"></i>  Donate</a>
+  <a href="#popup3" class="button animated pulse delay-1s"><i class="fa fa-money" aria-hidden="true"></i>  Donate</a>
   <br>
   p(style="color: #afafaf") Made with &lt;3 &nbsp;&nbsp; by The Mercode Community.
+  <div id="popup3" class="overlay">
+    .popup
+      h2 Donate to Mercode
+      a.close(href='#') &times;
+      <div class="content">
+        .minialan1
+          img.svg(src='assets/donation.svg', alt='Make Donations to Mercode!')
+        .paragraf1
+          | If you would like to see this team contributing more to the community, you can donate us on Patreon or send Etherium to our wallet to help us paying our server bills or to order us a coffee (because we need it after long hours of coding).
+          br
+        .butonalan
+          <a href="" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Pateron</a>
+          br
+          <input type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput">
+          br
+          <a onclick="copyClipboard()" class="button"><i class="fa fa-files-o" aria-hidden="true"></i>  ETH</a>
+      </div>
+  </div>
+
+  
