--- a/main.pug
+++ b/main.pug
@@ -10,6 +10,7 @@ head
   <link rel="stylesheet" href="css/main.css">
 
   <script src="./js/main.js"></script>
+  <script src="./js/jquery-3.3.1.js"></script>
 body
   block header
     <header>
