--- a/main.pug
+++ b/main.pug
@@ -11,6 +11,13 @@ head
 
   <script src="./js/main.js"></script>
   <script src="./js/jquery-3.3.1.js"></script>
+  script(src='./js/jquery-3.3.1.js')
+  script(type='text/javascript').
+    $(document).ready(function() {
+    $('.menu-toggle').click(function() {
+    $('nav').toggleClass('active')
+    })
+    })
 body
   block header
     <header>
