--- a/tr/main.pug
+++ b/tr/main.pug
@@ -9,7 +9,16 @@ head
   <link rel="shortcut icon" type="image/png" href="../assets/icon.png">
   <link rel="stylesheet" href="../css/main.css">
 
-  <script src="./js/main.js"></script>
+  <script src="../js/main.js"></script>
+  <script src="../js/jquery-3.3.1.js"></script>
+  script(src='../js/jquery-3.3.1.js')
+  script(type='text/javascript').
+    $(document).ready(function() {
+    $('.menu-toggle').click(function() {
+    $('nav').toggleClass('active')
+    })
+    })
+
 body
   block header
     <header>
