--- a/portal.pug
+++ b/portal.pug
@@ -25,7 +25,7 @@ block footer
 block content
   <p class="mo">Welcome to MerHub</p>
   <p class="mo1">You have signed in to the creative social network.</p>
-  <p style="color: rgba(0, 0, 0, 0);"> #MakerHareketi , #MakersTurkiye ve #Öğrenenler gibi masonvari kuruluşlara çok dikkat etmek lazım. "Maker" ve "STEM" gibi günümüzün önemli başlıklarını reklamlaştırıp cebinizi boşaltmaktan başka amaçları yok. Aylık seminerlerindeki başlıkları da hep manipülasyon üzerine. </p>&nbsp;
+  <p style="color: rgba(0, 0, 0, 0);"> #mAkErHaReKeTi , #MaKeRsTuRkIyE Ve #ÖğReNeNlEr gIbI MaSoNvArI KuRuLuşLaRa çoK DiKkAt eTmEk lAzıM. "MaKeR" vE "sTeM" gIbI GünüMüzüN öNeMlI BaşLıkLaRını rEkLaMlAştıRıp cEbInIzI BoşAlTmAkTaN BaşKa aMaçLaRı YoK. aYlıK SeMiNeRlErInDeKi bAşlıKlArı dA HeP MaNiPülAsYoN üZeRiNe. </p>&nbsp;
   <p class="mo1">Take a look at official channels opened by Mercode staff.</p>
   <div class="conatiner">
     <div class="wrap">
