portal.pug's code is converted to pug format and fixed bugs.

--- a/portal.pug
+++ b/portal.pug
@@ -1,115 +1,110 @@
-extends main.pug
-
-block css
-  <link rel="stylesheet" type="text/css" href="css/stiller.css">
-  <link rel="stylesheet" type="text/css" href="css/body.css">
-  <link rel="stylesheet" type="text/css" href="css/portal.css">
-
-block header
-  <header class="portalheader">
-    <div class="logo"><a href="https://hub.mercode.org/"><img src="./assets/hub.mercode.png" style="width:auto;height:20px;padding-top:10px;" alt="*hub.mercode*"></a></div>
-    <nav>
-      <ul>
-        <li><a href="https://hub.mercode.org/channel"><i class="fa fa-user-circle-o" aria-hidden="true"></i>  My Accounts</a></li>
-        <li><a href="https://hub.mercode.org/manage"><i class="fa fa-address-book-o" aria-hidden="true"></i>  Channel Manager</a></li>
-        <li><a href="https://hub.mercode.org/profiles"><i class="fa fa-cog" aria-hidden="true"></i>  Settings</a></li>
-        <li><a href="https://hub.mercode.org/directory"><i class="fa fa-sitemap " aria-hidden="true"></i>  Directory</a></li>
-        <li><a href="https://hub.mercode.org/logout"><i class="fa fa-sign-out" aria-hidden="true"></i>  Sign Out</a></li>
-      </ul>
-    </nav>
-    <div class="menu-toggle"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>
-  </header>
-
-block footer
-
-block content
-  <p class="mo">Welcome to MerHub</p>
-  <p class="mo1">You have signed in to the creative social network.</p>
-  <p style="color: rgba(0, 0, 0, 0);"> #mAkErHaReKeTi , #MaKeRsTuRkIyE Ve #ÖğReNeNlEr gIbI MaSoNvArI KuRuLuşLaRa çoK DiKkAt eTmEk lAzıM. "MaKeR" vE "sTeM" gIbI GünüMüzüN öNeMlI BaşLıkLaRını rEkLaMlAştıRıp cEbInIzI BoşAlTmAkTaN BaşKa aMaçLaRı YoK. aYlıK SeMiNeRlErInDeKi bAşlıKlArı dA HeP MaNiPülAsYoN üZeRiNe. </p>&nbsp;
-  <p class="mo1">Take a look at official channels opened by Mercode staff.</p>
-  <div class="conatiner">
-    <div class="wrap">
-
-      <div class="box two" onclick="myhref('https://hub.mercode.org/channel/linux');">
-        <div class="date">
-          <h4 style="color: green;">Status: OPEN</h4>
-        </div>
-        <h2>GNU/Linux</h2>
-        <div class="poster p1">
-          <h4><img class="portalsimge" src="./assets/portal2.png"></h4>
-        </div>
-      </div>
-
-      <div class="box one" onclick="myhref('https://hub.mercode.org/channel/raspberrypi');">
-        <div class="date">
-          <h4 style="color: green;">Status: OPEN</h4>
-        </div>
-        <h2>Raspberry Pi</h2>
-        <div class="poster p1">
-          <h4><img class="portalsimge" src="./assets/portal1pi.png"></h4>
-        </div>
-      </div>
-
-      <div class="box nine" onclick="myhref('https://hub.mercode.org/channel/arduino');">
-        <div class="date">
-          <h4 style="color: green;">Status: OPEN</h4>
-        </div>
-        <h2>Arduino</h2>
-        <div class="poster p1">
-          <h4><img class="portalsimge" src="./assets/portal8.png"></h4>
-        </div>
-      </div>
-
-      <div class="box five" onclick="myhref('https://hub.mercode.org/channel/meros');">
-        <div class="date">
-          <h4 style="color: green;">Status: OPEN</h4>
-        </div>
-        <h2>MerOS</h2>
-        <div class="poster p1">
-          <h4><img class="portalsimge" src="./assets/portal4.png"></h4>
-        </div>
-      </div>
-
-      <div class="box three" onclick="myhref('https://hub.mercode.org/channel/first');">
-        <div class="date">
-          <h4 style="color: yellow;">Status: Passive</h4>
-        </div>
-        <h2>FIRST Support</h2>
-        <div class="poster p1">
-          <h4><img class="portalsimge" src="./assets/portal3.png"></h4>
-        </div>
-      </div>
-
-      <div class="box six" onclick="myhref('https://hub.mercode.org/channel/robotik');">
-        <div class="date">
-          <h4 style="color: green;">Status: OPEN</h4>
-        </div>
-        <h2>Robotics</h2>
-        <div class="poster p1">
-          <h4><img class="portalsimge" src="./assets/portal5.png"></h4>
-        </div>
-      </div>
-
-      <div class="box eight" onclick="myhref('https://hub.mercode.org/channel/3ddp');">
-        <div class="date">
-          <h4 style="color: green;">Status: OPEN</h4>
-        </div>
-        <h2>3D Design/Printing</h2>
-        <div class="poster p1">
-          <h4><img class="portalsimge" src="./assets/portal7.png"></h4>
-        </div>
-      </div>
-
-      <div class="box seven" onclick="myhref('https://hub.mercode.org/channel/electrocars');">
-        <div class="date">
-          <h4 style="color: green;">Status: OPEN</h4>
-        </div>
-        <h2>Electric Cars</h2>
-        <div class="poster p1">
-          <h4><img class="portalsimge" src="./assets/portal6.png"></h4>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  <script>function myhref (href) { window.location.href = href }</script>
+doctype html
+head
+meta(name='viewport', content='width=device-width, initial-scale=1.0, user-scalable=no')
+meta(charset='utf-8')
+title MerHub
+link(rel='shortcut icon', type='image/png', href='assets/ikonhub.png')
+link(rel='stylesheet', type='text/css', href='css/stiller.css')
+link(rel='stylesheet', type='text/css', href='css/body.css')
+link(rel='stylesheet', type='text/css', href='css/portal.css')
+link(rel='stylesheet', type='text/css', href='css/main.css')
+header.portalheader
+  .logo
+    a(href='https://hub.mercode.org/')
+      img(src='./assets/hub.mercode.png', style='width:auto;height:20px;padding-top:10px;', alt='*hub.mercode*')
+  nav
+    ul
+      li
+        a(href='https://hub.mercode.org/channel')
+          i.fa.fa-user-circle-o(aria-hidden='true')
+          |   My Accounts
+      li
+        a(href='https://hub.mercode.org/manage')
+          i.fa.fa-address-book-o(aria-hidden='true')
+          |   Channel Manager
+      li
+        a(href='https://hub.mercode.org/profiles')
+          i.fa.fa-cog(aria-hidden='true')
+          |   Settings
+      li
+        a(href='https://hub.mercode.org/directory')
+          i.fa.fa-sitemap(aria-hidden='true')
+          |   Directory
+      li
+        a(href='https://hub.mercode.org/logout')
+          i.fa.fa-sign-out(aria-hidden='true')
+          |   Sign Out
+  .menu-toggle
+    i.fa.fa-ellipsis-v(aria-hidden='true')
+p.mo Welcome to MerHub
+p.mo1 You have signed in to the creative social network.
+p(style='color: rgba(0, 0, 0, 0);')
+  | #mAkErHaReKeTi , #MaKeRsTuRkIyE Ve #&Ouml;&gbreve;ReNeNlEr gIbI MaSoNvArI KuRuLu&scedil;LaRa &ccedil;oK DiKkAt eTmEk lAz&imath;M. &quot;MaKeR&quot; vE &quot;sTeM&quot; gIbI G&uuml;n&uuml;M&uuml;z&uuml;N &ouml;NeMlI Ba&scedil;L&imath;kLaR&imath;n&imath; rEkLaMlA&scedil;t&imath;R&imath;p cEbInIzI Bo&scedil;AlTmAkTaN Ba&scedil;Ka aMa&ccedil;LaR&imath; YoK. aYl&imath;K SeMiNeRlErInDeKi bA&scedil;l&imath;KlAr&imath; dA HeP MaNiP&uuml;lAsYoN &uuml;ZeRiNe.
+p.mo1 Take a look at official channels opened by Mercode staff.
+.conatiner
+  .wrap
+    .box.two(onclick="myhref('https://hub.mercode.org/channel/linux');")
+      .date
+        h4(style='color: green;') Status: OPEN
+      h2 GNU/Linux
+      .poster.p1
+        h4
+          img.portalsimge(src='./assets/portal2.png')
+    .box.one(onclick="myhref('https://hub.mercode.org/channel/raspberrypi');")
+      .date
+        h4(style='color: green;') Status: OPEN
+      h2 Raspberry Pi
+      .poster.p1
+        h4
+          img.portalsimge(src='./assets/portal1pi.png')
+    .box.nine(onclick="myhref('https://hub.mercode.org/channel/arduino');")
+      .date
+        h4(style='color: green;') Status: OPEN
+      h2 Arduino
+      .poster.p1
+        h4
+          img.portalsimge(src='./assets/portal8.png')
+    .box.five(onclick="myhref('https://hub.mercode.org/channel/meros');")
+      .date
+        h4(style='color: green;') Status: OPEN
+      h2 MerOS
+      .poster.p1
+        h4
+          img.portalsimge(src='./assets/portal4.png')
+    .box.three(onclick="myhref('https://hub.mercode.org/channel/first');")
+      .date
+        h4(style='color: yellow;') Status: Passive
+      h2 FIRST Support
+      .poster.p1
+        h4
+          img.portalsimge(src='./assets/portal3.png')
+    .box.six(onclick="myhref('https://hub.mercode.org/channel/robotik');")
+      .date
+        h4(style='color: green;') Status: OPEN
+      h2 Robotics
+      .poster.p1
+        h4
+          img.portalsimge(src='./assets/portal5.png')
+    .box.eight(onclick="myhref('https://hub.mercode.org/channel/3ddp');")
+      .date
+        h4(style='color: green;') Status: OPEN
+      h2 3D Design/Printing
+      .poster.p1
+        h4
+          img.portalsimge(src='./assets/portal7.png')
+    .box.seven(onclick="myhref('https://hub.mercode.org/channel/electrocars');")
+      .date
+        h4(style='color: green;') Status: OPEN
+      h2 Electric Cars
+      .poster.p1
+        h4
+          img.portalsimge(src='./assets/portal6.png')
+script.
+  function myhref (href) { window.location.href = href }
+script(src='./js/jquery-3.3.1.js')
+script(type='text/javascript').
+  $(document).ready(function() {
+  $('.menu-toggle').click(function() {
+  $('nav').toggleClass('active')
+  })
+  })
