portal.pug bug fixed

--- a/portal.pug
+++ b/portal.pug
@@ -4,10 +4,10 @@ meta(name='viewport', content='width=device-width, initial-scale=1.0, user-scala
 meta(charset='utf-8')
 title MerHub
 link(rel='shortcut icon', type='image/png', href='assets/ikonhub.png')
-link(rel='stylesheet', type='text/css', href='css/stiller.css')
-link(rel='stylesheet', type='text/css', href='css/body.css')
-link(rel='stylesheet', type='text/css', href='css/portal.css')
-link(rel='stylesheet', type='text/css', href='css/main.css')
+link(rel='stylesheet', type='text/css', href='https://mercode.org/css/stiller.css')
+link(rel='stylesheet', type='text/css', href='https://mercode.org/css/body.css')
+link(rel='stylesheet', type='text/css', href='https://mercode.org/css/portal.css')
+link(rel='stylesheet', type='text/css', href='https://mercode.org/css/main.css')
 header.portalheader
   .logo
     a(href='https://hub.mercode.org/')
@@ -49,49 +49,49 @@ p.mo1 Take a look at official channels opened by Mercode staff.
       h2 GNU/Linux
       .poster.p1
         h4
-          img.portalsimge(src='./assets/portal2.png')
+          img.portalsimge(src='https://mercode.org/assets/portal2.png')
     .box.one(onclick="myhref('https://hub.mercode.org/channel/raspberrypi');")
       .date
         h4(style='color: green;') Status: OPEN
       h2 Raspberry Pi
       .poster.p1
         h4
-          img.portalsimge(src='./assets/portal1pi.png')
+          img.portalsimge(src='https://mercode.org/assets/portal1pi.png')
     .box.nine(onclick="myhref('https://hub.mercode.org/channel/arduino');")
       .date
         h4(style='color: green;') Status: OPEN
       h2 Arduino
       .poster.p1
         h4
-          img.portalsimge(src='./assets/portal8.png')
+          img.portalsimge(src='https://mercode.org/assets/portal8.png')
     .box.five(onclick="myhref('https://hub.mercode.org/channel/meros');")
       .date
         h4(style='color: green;') Status: OPEN
       h2 MerOS
       .poster.p1
         h4
-          img.portalsimge(src='./assets/portal4.png')
+          img.portalsimge(src='https://mercode.org/assets/portal4.png')
     .box.three(onclick="myhref('https://hub.mercode.org/channel/first');")
       .date
         h4(style='color: yellow;') Status: Passive
       h2 FIRST Support
       .poster.p1
         h4
-          img.portalsimge(src='./assets/portal3.png')
+          img.portalsimge(src='https://mercode.org/assets/portal3.png')
     .box.six(onclick="myhref('https://hub.mercode.org/channel/robotik');")
       .date
         h4(style='color: green;') Status: OPEN
       h2 Robotics
       .poster.p1
         h4
-          img.portalsimge(src='./assets/portal5.png')
+          img.portalsimge(src='https://mercode.org/assets/portal5.png')
     .box.eight(onclick="myhref('https://hub.mercode.org/channel/3ddp');")
       .date
         h4(style='color: green;') Status: OPEN
       h2 3D Design/Printing
       .poster.p1
         h4
-          img.portalsimge(src='./assets/portal7.png')
+          img.portalsimge(src='https://mercode.org/assets/portal7.png')
     .box.seven(onclick="myhref('https://hub.mercode.org/channel/electrocars');")
       .date
         h4(style='color: green;') Status: OPEN
