--- a/portal.pug
+++ b/portal.pug
@@ -3,7 +3,7 @@ head
 meta(name='viewport', content='width=device-width, initial-scale=1.0, user-scalable=no')
 meta(charset='utf-8')
 title MerHub
-link(rel='shortcut icon', type='image/png', href='assets/ikonhub.png')
+link(rel='shortcut icon', type='image/png', href='https://mercode.org/assets/ikonhub.png')
 link(rel='stylesheet', type='text/css', href='https://mercode.org/css/stiller.css')
 link(rel='stylesheet', type='text/css', href='https://mercode.org/css/body.css')
 link(rel='stylesheet', type='text/css', href='https://mercode.org/css/portal.css')
