bug fix (again)

--- a/portal.pug
+++ b/portal.pug
@@ -11,7 +11,7 @@ link(rel='stylesheet', type='text/css', href='https://mercode.org/css/main.css')
 header.portalheader
   .logo
     a(href='https://hub.mercode.org/')
-      img(src='./assets/hub.mercode.png', style='width:auto;height:20px;padding-top:10px;', alt='*hub.mercode*')
+      img(src='https://mercode.org/assets/hub.mercode.png', style='width:auto;height:20px;padding-top:10px;', alt='*hub.mercode*')
   nav
     ul
       li
