The last bug fix

--- a/portal.pug
+++ b/portal.pug
@@ -101,7 +101,7 @@ p.mo1 Take a look at official channels opened by Mercode staff.
           img.portalsimge(src='./assets/portal6.png')
 script.
   function myhref (href) { window.location.href = href }
-script(src='./js/jquery-3.3.1.js')
+script(src='https://mercode.org/js/jquery-3.3.1.js')
 script(type='text/javascript').
   $(document).ready(function() {
   $('.menu-toggle').click(function() {
