Solved donation popup bug and improved the design and pug blocks.

--- a/mercode.org/css/popup.css
+++ b/mercode.org/css/popup.css
@@ -30,7 +30,6 @@
 .popup h2 {
   margin-top: 0;
   color: white;
-  font-family: Montserrat;
 }
 .popup .close {
   position: absolute;
@@ -121,6 +120,14 @@ input[type=text] {
   visibility: visible;
   opacity: 1;
 }
+@media screen and (max-width: 1090px){
+  .paragraf1 {
+    width: 40%;
+  }
+  .minialan1 {
+    width: auto;
+  }
+}
 @media screen and (max-width: 700px){
   .box{
     width: 70%;
@@ -129,8 +136,11 @@ input[type=text] {
     width: 70%;
   }
 }
-@media (max-width: 540px)
+@media screen and (max-width: 910px)
 {
+  .minialan1 {
+    width: 90%;
+  }
   .svg {
     width: 100%;
     height: auto;
