--- a/tr/about.pug
+++ b/tr/about.pug
@@ -32,27 +32,10 @@ block content
         h2 Sizin Bağışlarınızla Hayatta Kalıyoruz!
         p(style='font-size: 14px;')
           | Merkür ve alt projeleri, tamamen kullanıcıların ve ekip üyelerinin bağışlarıyla tutunur. Sonuç olarak Merkür’ün devamlılığı tamamen topluluğun yani siz insanların ellerindedir. Bu ekibin topluluğa daha çok katkı sağlaması için, sunucu ve diğer masraflarını ödemesine yardımcı olmak veya üyelere bir kahve ısmarlamak için Patreon'dan veya Etherium aracılığıyla bağış yapabilirsiniz. Eğer Merkür devamlılığını ve hizmetlerini sürdüremeyecek duruma gelirse, *onlar* kazanır.
-        a.button(href='#popup3')
+        a.button(href='#donate')
           i.fa.fa-money(aria-hidden='true')
           |  Bağış Yap
-        <div id="popup3" class="overlay">
-          .popup
-            h2 Mercode'a Bağış Yap
-            a.close(href='#') &times;
-            <div class="content">
-              .minialan1
-                img.svg(src='../assets/donation.svg', alt='Mercode&apos;a bağış yapın!')
-              .paragraf1
-                | Bu ekibin topluluğa daha çok katkı sağlaması, sunucu ve diğer masraflarını ödemesine yardımcı olmak veya üyelere bir kahve ısmarlamak için (yorucu bir günün ardından çok iyi geliyor) Patreon'dan veya Etherium aracılığıyla bağış yapabilirsiniz.
-                br
-              .butonalan
-                <a href="" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Pateron</a>
-                br
-                <input type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput">
-                br
-                <a onclick="copyClipboard()" class="button"><i class="fa fa-files-o" aria-hidden="true"></i>  ETH</a>
-            </div>
-        </div>
+        
     li
       .konu
         h2 Bir Halk Takımı
