--- a/main.pug
+++ b/main.pug
@@ -46,7 +46,27 @@ body
     </header>
     
   block content
-
+  
+  block donate
+    <div id="donate" class="overlay">
+      .popup
+        h2 Donate to Mercode
+        a.close(href='#') &times;
+        <div class="content">
+          .minialan1
+            img.svg(src='assets/donation.svg', alt='Make Donations to Mercode!')
+          .paragraf1
+            | If you would like to see this team contributing more to the community, you can donate us on Patreon or send Etherium to our wallet to help us paying our server bills or to order us a coffee (because we need it after long hours of coding).
+            br
+          .butonalan
+            <a href="" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Pateron</a>
+            br
+            <input type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput">
+            br
+            <a onclick="copyClipboard()" class="button"><i class="fa fa-files-o" aria-hidden="true"></i>  ETH</a>
+        </div>
+    </div>
+    
   block footer
     <div class="footer">
       <div class="footer-copyright">
