--- a/main.pug
+++ b/main.pug
@@ -59,9 +59,9 @@ body
             | If you would like to see this team contributing more to the community, you can donate us on Patreon or send Etherium to our wallet to help us paying our server bills or to order us a coffee (because we need it after long hours of coding).
             br
           .butonalan
-            <a href="" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Pateron</a>
+            <a href="https://www.patreon.com/mercode" class="button"><i class="fa fa-money" aria-hidden="true"></i>  Pateron</a>
             br
-            <input type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput">
+            <input class="kripto" type="text" value="0xf65C6EE66b6f831Ac212A86C2c3502FC285C978E" id="myInput">
             br
             <a onclick="copyClipboard()" class="button"><i class="fa fa-files-o" aria-hidden="true"></i>  ETH</a>
         </div>
