--- a/mercode.org/css/popup.css
+++ b/mercode.org/css/popup.css
@@ -33,8 +33,8 @@
 }
 .popup .close {
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: 5px;
+  right: 10px;
   transition: all 200ms;
   font-size: 30px;
   font-weight: bold;
@@ -74,7 +74,7 @@
   margin-left: 5px;
   margin-right: 5px;
 }
-input[type=text] {
+.kripto[type=text] {
   background-color: #555;
   color: #fff;
   width: 100%;
