Fixed project page links

--- a/tr/projects.pug
+++ b/tr/projects.pug
@@ -31,7 +31,7 @@ block content
           img(style='width: 45%;height: auto; padding-top: 10px;', src='../assets/meros.png', alt='')
         p(style='font-size: 14px;')
           | MerOS, taşınabilir live bir işletim sistemi. İçinde bütün işlerinizi görecek programları barındıran MerOS'u USB'nize kurup çalıştırabilirsiniz.
-        a.button(href='os.mercode.org')
+        a.button(href='https://os.mercode.org')
           i.fa.fa-external-link-square(aria-hidden='true')
           |  Göz at
     li
@@ -40,7 +40,7 @@ block content
           img(style='width: 45%;height: auto; padding-top: 10px;', src='../assets/hackup.png', alt='')
         p(style='font-size: 14px;')
           | İtalyan Lisesi'ni merkez olarak kullanan HackUP, uluslararası bir IT kulübü ve hackerspacedir.
-        a.button(href='hackup.mercode.org')
+        a.button(href='https://hackup.mercode.org')
           i.fa.fa-external-link-square(aria-hidden='true')
           |  Göz at
 block footer
