Fixed join us broken link

--- a/tr/index.pug
+++ b/tr/index.pug
@@ -7,7 +7,7 @@ block content
   <div class="hos"> Mercode: yazılımcılardan yazılımcılara.</div>
   <h3>Kar Amacı Gütmeyen Açık Kaynaklı Özgür Yazılım Organizasyonu/OS ve Sosyal Ağ.</h3>
 
-  <a href="join.pug" class="button animated pulse delay-1s"><i class="fa fa-handshake-o" aria-hidden="true"></i>  Bize Katıl</a>
+  <a href="join.html" class="button animated pulse delay-1s"><i class="fa fa-handshake-o" aria-hidden="true"></i>  Bize Katıl</a>
   <a href="https://hub.mercode.org/register" class="button animated pulse delay-1s"><i class="fa fa-sign-in" aria-hidden="true"></i>  Kaydol</a>
   <a href="#donate" class="button animated pulse delay-1s"><i class="fa fa-money" aria-hidden="true"></i>  Bağış Yap</a>
   <br>
