--- a/index.pug
+++ b/index.pug
@@ -7,7 +7,7 @@ block content
   <div class="hos"> Mercode: By devs, for devs.</div>
   <h3>Non-Profit Free Open Source Software/OS Foundation and Social Network for Developers Worldwide</h3>
 
-  <a href="join.pug" class="button animated pulse delay-1s"><i class="fa fa-handshake-o" aria-hidden="true"></i>  Join Us</a>
+  <a href="join.html" class="button animated pulse delay-1s"><i class="fa fa-handshake-o" aria-hidden="true"></i>  Join Us</a>
   <a href="https://hub.mercode.org/register" class="button animated pulse delay-1s"><i class="fa fa-sign-in" aria-hidden="true"></i>  Register</a>
   <a href="#donate" class="button animated pulse delay-1s"><i class="fa fa-money" aria-hidden="true"></i>  Donate</a>
   <br>
