--- a/join.pug
+++ b/join.pug
@@ -2,7 +2,8 @@ extends main.pug
 
 block css
   <link rel="stylesheet" type="text/css" href="css/stiller.css">
-
+  <link rel="stylesheet" type="text/css" href="css/iletisimbody.css">
+  
 block content
   <form method="POST" action="https://formspree.io/tansiretakinci@yandex.com">
     <div class="txtb">
