--- a/tr/join.pug
+++ b/tr/join.pug
@@ -2,6 +2,7 @@ extends main.pug
 
 block css
   <link rel="stylesheet" type="text/css" href="../css/stiller.css">
+  <link rel="stylesheet" type="text/css" href="../css/iletisimbody.css">
 
 block content
   <form method="POST" action="https://formspree.io/tansiretakinci@yandex.com">
