--- a/about.pug
+++ b/about.pug
@@ -41,7 +41,7 @@ block content
         h2 A Team of People
         p(style='font-size: 14px;')
           | At Mercode, there isn&apos;t such a big division between the community and the team. Everyone, from every type of background and age can apply to our team. The only rule to be applied is to contribute and give support to this beautiful FOSS community.
-        a.button(href='join.pug')
+        a.button(href='join.html')
           i.fa.fa-handshake-o(aria-hidden='true')
           |  Join
         a.button(href='https://github.com/mercode-org')
@@ -52,7 +52,7 @@ block content
         h2 Decentralize to Be Free!
         p(style='font-size: 14px;')
           | We believe the humanity can outgo the borders, nations and flags with the Internet. Unfortunatelly the web which was ment to be unowned is being invaded by the server monopoly of big companies co-operating with states. The only solution to overthrow that invasion is to decentralize!  
-        a.button(href='projects.pug')
+        a.button(href='projects.html')
           i.fa.fa-tasks(aria-hidden='true')
           |  Projects
 block footer
