--- a/tr/about.pug
+++ b/tr/about.pug
@@ -41,7 +41,7 @@ block content
         h2 Bir Halk Takımı
         p(style='font-size: 14px;')
           | Mercode'da, takım ile topluluk arasında büyük bir ayrım yoktur. Herkes, geçmişine veya yaşına bakılmaksızın Mercode'a destek olabilir ve ekibimize katılabilir. Katılmak için tek gereklilik, bu güzel FOSS topluluğuna katkıda bulunmak ve desteklemek.
-        a.button(href='join.pug')
+        a.button(href='join.html')
           i.fa.fa-handshake-o(aria-hidden='true')
           |  Bize Katıl
         a.button(href='https://github.com/mercode-org')
@@ -52,7 +52,7 @@ block content
         h2 Özgürleşmek için Merkeziyetsizleş!
         p(style='font-size: 14px;')
           | Biz insanlığın sınırlar, ülkeler ve bayrakları internet ile aşabileceğine inanıyoruz. Ne yazık ki aslında sahipsiz olması gereken Web, büyük şirket ve devletlerin sunucu monopolileriyle ele geçirilmiş durumda. Bu istilayı önlemenin tek yolu merkeziyetsizleşmek!  
-        a.button(href='projects.pug')
+        a.button(href='projects.html')
           i.fa.fa-tasks(aria-hidden='true')
           |  Projeler
 block footer
