Added project links to the projects, broken links solved.

--- a/mercode.org/css/projeler.css
+++ b/mercode.org/css/projeler.css
@@ -39,12 +39,7 @@
   background-position: center;
 }
 .projeler li:nth-child(3){
-  background: url(../assets/merkuros2.jpg);
-  background-size: cover;
-  background-position: center;
-}
-.projeler li:nth-child(5){
-  background: url(../assets/merkuros.jpg);
+  background: url(../assets/meros4.png);
   background-size: cover;
   background-position: center;
 }
