--- a/tr/about.pug
+++ b/tr/about.pug
@@ -26,7 +26,7 @@ block content
           |  Kaydol
         a.button(href='https://github.com/mercode-org')
           i.fa.fa-fork(aria-hidden='true')
-          |  Katkıda Bulun
+          |  Katkı
     li
       .konu
         h2 Sizin Bağışlarınızla Hayatta Kalıyoruz!
@@ -46,7 +46,7 @@ block content
           |  Bize Katıl
         a.button(href='https://github.com/mercode-org')
           i.fa.fa-fork(aria-hidden='true')
-          |  Katkıda Bulun
+          |  Katkı
     li
       .konu
         h2 Özgürleşmek için Merkeziyetsizleş!
