--- a/tr/projects.pug
+++ b/tr/projects.pug
@@ -13,34 +13,40 @@ block content
           img(style='width: 40%;height: auto;', src='../assets/merzero.png', alt='')
         p(style='font-size: 14px;')
           | Mercode&apos;un Zeronet üzerinde çalışan, tohum eken, değişik projeler içeren  ve Zeronet'i online kullanıma açan aktivist alternatifi.
-        a.button(href='#')
-          i.fa.fa-external-link-square(aria-hidden='true')
-          |  Göz at
+        a.button(href='https://github.com/orgs/mercode-org/projects/3')
+          i.fa.fa-tasks(aria-hidden='true')
+          |  Durum
     li
       .konu
         div
           img(style='width: 55%;height: auto; padding-top: 10px;', src='../assets/hub.mercode.png', alt='')
         p(style='font-size: 14px;')
           | hub.mercode, Mercode takımı tarafından zot protokolü forklanarak yapılmış merkeziyetsiz bir sosyal ağ. Bu ağga, tüm kullanıcılar sınırsız kanal açma hakkına sahip. Bu kanallar son kullanıcının ihtiyacına göre profil, blog, forum, wiki vs. işlevi görebilir. Ayrıca Mercode takımı tarafından yeni gelenler için açılmış resmi kanallar vardır.
-        a.button(href='#')
+        a.button(href='https://github.com/orgs/mercode-org/projects/2')
+          i.fa.fa-tasks(aria-hidden='true')
+          |  Durum
+        a.button(href='https://hub.mercode.org')
           i.fa.fa-external-link-square(aria-hidden='true')
-          |  Göz at
+          |  Göz At
     li
       .konu
         div
           img(style='width: 45%;height: auto; padding-top: 10px;', src='../assets/meros.png', alt='')
         p(style='font-size: 14px;')
           | MerOS, taşınabilir live bir işletim sistemi. İçinde bütün işlerinizi görecek programları barındıran MerOS'u USB'nize kurup çalıştırabilirsiniz.
-        a.button(href='https://os.mercode.org')
-          i.fa.fa-external-link-square(aria-hidden='true')
-          |  Göz at
+        a.button(href='https://github.com/orgs/mercode-org/projects/1')
+          i.fa.fa-tasks(aria-hidden='true')
+          |  Durum
     li
       .konu
         div
           img(style='width: 45%;height: auto; padding-top: 10px;', src='../assets/hackup.png', alt='')
         p(style='font-size: 14px;')
           | İtalyan Lisesi'ni merkez olarak kullanan HackUP, uluslararası bir IT kulübü ve hackerspacedir.
+        a.button(href='https://github.com/hackup-org')
+          i.fa.fa-code-fork(aria-hidden='true')
+          |  Katkı
         a.button(href='https://hackup.mercode.org')
           i.fa.fa-external-link-square(aria-hidden='true')
-          |  Göz at
+          |  Göz At
 block footer
