--- a/projects.pug
+++ b/projects.pug
@@ -13,34 +13,40 @@ block content
           img(style='width: 40%;height: auto;', src='assets/merzero.png', alt='')
         p(style='font-size: 14px;')
           | Mercode&apos;s freedom-preferential alternative running, seeding and containing several projects, blogs and sites by providing a public Zeronet to the community members.
-        a.button(href='#')
-          i.fa.fa-external-link-square(aria-hidden='true')
-          |  Enter
+        a.button(href='https://github.com/orgs/mercode-org/projects/3')
+          i.fa.fa-tasks(aria-hidden='true')
+          |  Status
     li
       .konu
         div
           img(style='width: 55%;height: auto; padding-top: 10px;', src='assets/hub.mercode.png', alt='')
         p(style='font-size: 14px;')
           | hub.mercode is a decentralized social network which is made by Mercode team forked from the zot protocol. At this network, every user has the permission of opening channels infinitively (depends to the status of the server). Those channels can be a profile, infographic, forum, blog, wiki and more depending to the needs of the end user. Also there&rsquo;re official channels opened by Mercode team for newbies to let them socialise.
-        a.button(href='#')
+        a.button(href='https://github.com/orgs/mercode-org/projects/2')
+          i.fa.fa-tasks(aria-hidden='true')
+          |  Status
+        a.button(href='https://hub.mercode.org')
           i.fa.fa-external-link-square(aria-hidden='true')
-          |  Enter
+          |  Proceed
     li
       .konu
         div
           img(style='width: 45%;height: auto; padding-top: 10px;', src='assets/meros.png', alt='')
         p(style='font-size: 14px;')
           | MerOS is a potable live Linux distro with pre-installed programs that you can install on your USB.
-        a.button(href='#')
-          i.fa.fa-external-link-square(aria-hidden='true')
-          |  Enter
+        a.button(href='https://github.com/orgs/mercode-org/projects/1')
+          i.fa.fa-tasks(aria-hidden='true')
+          |  Status
     li
       .konu
         div
           img(style='width: 45%;height: auto; padding-top: 10px;', src='assets/hackup.png', alt='')
         p(style='font-size: 14px;')
           | Using Italian Scentific High School as its hq, HackUp is an IT club made up with high school and university students around The World.
+        a.button(href='https://github.com/hackup-org')
+          i.fa.fa-code-fork(aria-hidden='true')
+          |  Contribute
         a.button(href='https://hackup.mercode.org')
           i.fa.fa-external-link-square(aria-hidden='true')
-          |  Enter
+          |  Proceed
 block footer
