Fixed typo at portal.

--- a/portal.pug
+++ b/portal.pug
@@ -17,7 +17,7 @@ header.portalheader
       li
         a(href='https://hub.mercode.org/channel')
           i.fa.fa-user-circle-o(aria-hidden='true')
-          |   My Accounts
+          |   My Account
       li
         a(href='https://hub.mercode.org/manage')
           i.fa.fa-address-book-o(aria-hidden='true')
